# mailcart

./: .clang-tidy  .clang-tidy.report  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  .swiftlint.yml  00_verify_requirements_traceability.sh  01_install_prerequisites.sh  02_create_venv.sh  03_load_requirements.sh  03_prepare_supply_chain_integrity.sh  04_install_matchy_api_tls.sh  04_load_requirements.sh  04_run_dependency_freshness_checks.sh  05_install_matchy_api_tls.sh  05_run_all_tests_parallel.sh  06_run_all_tests_parallel.sh  07_clean_generated_files.sh  11_run_all_tests_parallel.sh  17_verify_macos_crash_reporter.sh  18_run_matchy_mailcart_api.py  Architecture.md  Makefile  README.md  dast_app.py  pyproject.toml  requirements.in  requirements.txt
.cursor/plans/: fix_traceability_contract_drift_304840ba.plan.md  graph_token_auto-refresh_27a42da0.plan.md  mailcart_python_to_c++_migration_16d86b24.plan.md
.github/workflows/: ci.yml
config/security/: bandit.yml  semgrep.yml
cpp_core/: CMakeLists.txt
cpp_core/fuzz/: fuzz_aho_corasick.cpp  fuzz_graph_payloads.cpp  fuzz_query_parse.cpp
cpp_core/include/: mailcart.hpp  mime_content.hpp  outlook_client.hpp  outlook_mailcart.hpp
cpp_core/include/mailcartcore/: api.hpp  api_error.hpp  graph.hpp  http_transport.hpp  search.hpp  subprocess.hpp  token.hpp
cpp_core/openapi/: openapi.json
cpp_core/oracle/: compare_oracle.py  goldens.json  scenarios.json
cpp_core/src/: api.cpp  graph.cpp  http_transport.cpp  mailcart.cpp  mime_content.cpp  outlook_client.cpp  outlook_mailcart.cpp  search.cpp  subprocess.cpp  token.cpp
cpp_core/tests/: outlook_graph_replay_test.mm  outlook_integration_test.cpp  test_api.cpp  test_outlook_core.cpp  test_search.cpp  test_token.cpp
cpp_core/tests/fixtures/graph/: attachments_response.json  error_401.json  message_response.json  search_response.json
cpp_core/tools/: mailcart_api.cpp  mailcart_token.cpp  oracle_runner.cpp
deprecated/: 04_run_dependency_freshness_checks.sh
deprecated/r_prefix_pointers_2026-06-03-01.08.41/: r00_verify_requirements_traceability.sh  (+5 more)
macos_app/: OutlookMail-Bridging-Header.h  project.yml
requirements/: .gitignore-requirements.md  00_verify_requirements_traceability-requirements.md  01_install_prerequisites-requirements.md  02_create_venv-requirements.md  03_load_requirements-requirements.md  03_prepare_supply_chain_integrity-requirements.md  04_install_matchy_api_tls-requirements.md  04_load_requirements-requirements.md  04_run_dependency_freshness_checks-requirements.md  05_install_matchy_api_tls-requirements.md  05_run_all_tests_parallel-requirements.md  06_run_all_tests_parallel-requirements.md  07_clean_generated_files-requirements.md  11_run_all_tests_parallel-requirements.md  17_verify_macos_crash_reporter-requirements.md  Bridge-requirements.md  CrashReporterService-requirements.md  HTMLBodyView-requirements.md  MailcartLaunchMode-requirements.md  MailcartTests-requirements.md  MailcartUITests-requirements.md  Makefile-requirements.md  OutlookBridgeModels-requirements.md  OutlookBridgeParser-requirements.md  OutlookClientBridge-requirements.md  OutlookGraphConversions-requirements.md  OutlookGraphHttpClient-requirements.md  OutlookGraphMessageMover-requirements.md  OutlookMail-Bridging-Header-requirements.md  UI-requirements.md  UITestingSupport-requirements.md  dast_app-requirements.md  generate_supply_chain_artifacts-requirements.md  graph_token-requirements.md  macos_build_lock-requirements.md  mailcart-requirements.md  mailcart_hpp-requirements.md  matchy_mailcart_api-requirements.md  mime_content-requirements.md  mime_content_hpp-requirements.md  (+25 more)
scripts/: graph_token.py  macos_build_lock.sh  matchy_mailcart_api.py  refresh_graph_token.py  verify_macos_crash_reporter.sh
tests/: t00_run_code_quality_tests.sh  t01_run_av_test.sh  t02_run_dependency_freshness_tests.sh  t03_run_static_security_tests.sh  t04_run_requirements_traceability_tests.sh  t05_run_shell_unit_tests.sh  t06_run_python_unit_tests.sh  t07_run_mutation_tests.sh  t07_run_shell_unit_tests.sh  t08_run_cpp_integration_tests.sh  t08_run_fuzz_tests.sh  t08_run_python_unit_tests.sh  t09_run_dynamic_security_tests.sh  t09_run_mutation_tests.sh  t09_run_swift_build_tests.sh  t10_run_fuzz_tests.sh  t10_verify_filevault_encryption_test.sh  t11_run_dynamic_security_tests.sh  t11_run_fuzz_tests.sh  t12_run_dynamic_security_tests.sh  t12_run_macos_ui_regression_tests.sh  t13_verify_macos_crash_test.sh  t14_verify_filevault_encryption_test.sh  t15_run_swift_unit_tests.sh  t16_run_graph_bridge_replay_tests.sh  t17_run_cpp_core_unit_tests.sh  t18_run_cpp_core_sanitizer_tests.sh  t18_verify_filevault_encryption_test.sh  t19_run_cpp_oracle_parity_test.sh  t20_run_cpp_fuzz_tests.sh
(+105 files in other folders)
